--- a/src/app/pages/estudiantes/estudiantes.page.html
+++ b/src/app/pages/estudiantes/estudiantes.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-title>Estudiantes</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="logout()">
@@ -10,42 +10,47 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" sizeMd="6" sizeLg="4" *ngFor="let alumno of alumnos">
-        <ion-card class="alumno-card">
-          <ion-card-header>
-            <ion-avatar class="alumno-avatar">
-              <img
-                *ngIf="alumno.foto && alumno.foto[0]?.url"
-                [src]="'http://localhost:1337' + alumno.foto[0].url"
-                alt="Foto alumno"
-              />
-              <ion-icon *ngIf="!alumno.foto || !alumno.foto[0]?.url" name="person-circle-outline"></ion-icon>
-            </ion-avatar>
-            <ion-card-title>{{ alumno.nombre }} {{ alumno.apellido }}</ion-card-title>
-            <ion-chip [color]="alumno.Estatus ? 'success' : 'danger'">
-              {{ alumno.Estatus ? 'Activo' : 'Inactivo' }}
-            </ion-chip>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-button expand="block" color="secondary" (click)="verDetalle(alumno)">
-              Ver detalles
-            </ion-button>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+<ion-content class="ion-padding estudiantes-background">
+  <ion-list lines="none">
+    <ion-item *ngFor="let alumno of alumnos">
+      <ion-avatar slot="start">
+        <img
+          *ngIf="alumno.foto && alumno.foto[0]?.url"
+          [src]="'http://localhost:1337' + alumno.foto[0].url"
+          alt="Foto alumno"
+        />
+        <ion-icon *ngIf="!alumno.foto || !alumno.foto[0]?.url" name="person-circle-outline"></ion-icon>
+      </ion-avatar>
+
+      <ion-label>
+        <h2>{{ alumno.nombre }} {{ alumno.apellido }}</h2>
+        <ion-chip [color]="alumno.Estatus ? 'success' : 'danger'">
+          {{ alumno.Estatus ? 'Activo' : 'Inactivo' }}
+        </ion-chip>
+      </ion-label>
+
+      <div class="item-buttons">
+        <ion-button
+          fill="clear"
+          (click)="confirmarLlegada(alumno)"
+          [disabled]="isConfirmationDisabled(alumno.documentId)">
+          Confirmar
+        </ion-button>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
+  <ion-toolbar class="footer-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="irHistorial()">
         <ion-icon name="book-outline" slot="start"></ion-icon>
-        Historial
+        Historial general
+      </ion-button>
+      <ion-button routerLink="/alumnos-docente">
+        <ion-icon name="people-outline" slot="start"></ion-icon>
+        Mis Alumnos
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
